--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.7.0",
     "react-icons": "^4.2.0",
     "yup": "^0.32.9"
