--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@hookform/resolvers": "^2.5.1",
     "apexcharts": "^3.26.3",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.5",
     "framer-motion": "4",
     "next": "10.2.0",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
@@ -28,6 +30,8 @@
   "devDependencies": {
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
