--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "dayjs": "^1.10.5",
     "framer-motion": "4",
+    "jwt-decode": "^3.1.2",
     "next": "10.2.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
@@ -25,6 +26,7 @@
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.7.0",
     "react-icons": "^4.2.0",
+    "react-query": "^3.16.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
