--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@hookform/resolvers": "^2.5.1",
+    "add": "^2.0.6",
     "apexcharts": "^3.26.3",
     "axios": "^0.21.1",
     "dayjs": "^1.10.5",
@@ -22,11 +23,13 @@
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-currency-masked-input": "^2.5.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.7.0",
     "react-icons": "^4.2.0",
     "react-query": "^3.16.0",
+    "yarn": "^1.22.10",
     "yup": "^0.32.9"
   },
   "devDependencies": {
