--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.7.0",
     "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
     "react-query": "^3.16.0",
     "socket.io-client": "^4.1.2",
     "yarn": "^1.22.10",
