--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.10.5",
     "framer-motion": "4",
     "jwt-decode": "^3.1.2",
+    "keen-slider": "^5.5.1",
     "next": "10.2.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
@@ -29,7 +30,9 @@
     "react-hook-form": "^7.7.0",
     "react-icons": "^4.2.0",
     "react-input-mask": "^2.0.4",
+    "react-intersection-observer": "^8.32.0",
     "react-query": "^3.16.0",
+    "react-scrollspy": "^3.4.3",
     "socket.io-client": "^4.1.2",
     "yarn": "^1.22.10",
     "yup": "^0.32.9"
@@ -37,6 +40,7 @@
   "devDependencies": {
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
+    "@types/react-scrollspy": "^3.3.3",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
