--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^3.1.2",
     "keen-slider": "^5.5.1",
     "next": "10.2.0",
+    "next-pwa": "^5.2.24",
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
